Fix editor content clipping bug (#2890)

--- a/packages/lexical-playground/src/index.css
+++ b/packages/lexical-playground/src/index.css
@@ -1071,12 +1071,11 @@ i.prettier-error {
 }
 
 .actions {
-  position: relative;
+  position: absolute;
   text-align: right;
   padding: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  background: #fff;
+  bottom: 0;
+  right: 0;
 }
 
 .actions.tree-view {
